--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+  "auth_token": "ehdasdjfasdfa.asdfasdf",
   "connections_api": {
     "url": "https://jpmc.atlan.com/api/getConnections",
     "payload": {
@@ -30,6 +31,20 @@
         ]
       }
     }
+  },
+  "api_map": {
+    "alteryx"    :"alteryx_api",
+    "api"        :"api_api",
+    "app"        :"app_api",
+    "file"       :"file_api",
+    "mparticle"  :"mparticle_api",
+    "spark"      :"spark_api",
+    "tableau"    :"tableau_api",
+    "thoughtspot":"thoughtspot_api",
+    "databricks" :"databases_api",
+    "oracle"     :"databases_api",
+    "snowflake"  :"databases_api",
+    "teradata"   :"databases_api"
   },
   "databases_api": {
     "url": "https://jpmc.atlan.com/api/getDatabases",
@@ -98,5 +113,473 @@
       "showSearchScore": false
     }
   },
-  "auth_token": "ehdasdjfasdfa.asdfasdf"
+  "alteryx_api": {
+    "url": "https://jpmc.atlan.com/api/getDatabases",
+    "payload": {
+      "dsl": {
+        "sort": [
+          {
+            "name.keyword": {
+              "order": "asc"
+            }
+          }
+        ],
+        "size": 300,
+        "query": {
+          "bool": {
+            "filter": {
+              "bool": {
+                "must": [
+                  {
+                    "term": {
+                      "__state": "ACTIVE"
+                    }
+                  },
+                  {
+                    "bool": {
+                      "should": [
+                        {
+                          "term": {
+                            "__typeName.keyword": "Database"
+                          }
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "bool": {
+                      "filter": {
+                        "term": {
+                          "connectionQualifiedName": "PLACEHOLDER_TO_BE_REPLACED"
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "attributes": [
+        "name",
+        "displayName"
+      ],
+      "relationAttributes": [],
+      "suppressLogs": true,
+      "requestMetadata": {},
+      "async": {
+        "isCallAsync": true,
+        "searchContextId": "f53f9d56-976e-4ec9-8cbc-a8c1d931a12a",
+        "searchContextSequenceNo": 1,
+        "requestTimeoutInSecs": 30
+      },
+      "excludeClassifications": false,
+      "includeClassificationNames": false,
+      "excludeMeanings": false,
+      "showSearchScore": false
+    }
+  },
+  "api_api": {
+    "url": "https://jpmc.atlan.com/api/getDatabases",
+    "payload": {
+      "dsl": {
+        "sort": [
+          {
+            "name.keyword": {
+              "order": "asc"
+            }
+          }
+        ],
+        "size": 300,
+        "query": {
+          "bool": {
+            "filter": {
+              "bool": {
+                "must": [
+                  {
+                    "term": {
+                      "__state": "ACTIVE"
+                    }
+                  },
+                  {
+                    "bool": {
+                      "should": [
+                        {
+                          "term": {
+                            "__typeName.keyword": "Database"
+                          }
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "bool": {
+                      "filter": {
+                        "term": {
+                          "connectionQualifiedName": "PLACEHOLDER_TO_BE_REPLACED"
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "attributes": [
+        "name",
+        "displayName"
+      ],
+      "relationAttributes": [],
+      "suppressLogs": true,
+      "requestMetadata": {},
+      "async": {
+        "isCallAsync": true,
+        "searchContextId": "f53f9d56-976e-4ec9-8cbc-a8c1d931a12a",
+        "searchContextSequenceNo": 1,
+        "requestTimeoutInSecs": 30
+      },
+      "excludeClassifications": false,
+      "includeClassificationNames": false,
+      "excludeMeanings": false,
+      "showSearchScore": false
+    }
+  },
+  "file_api": {
+    "url": "https://jpmc.atlan.com/api/getDatabases",
+    "payload": {
+      "dsl": {
+        "sort": [
+          {
+            "name.keyword": {
+              "order": "asc"
+            }
+          }
+        ],
+        "size": 300,
+        "query": {
+          "bool": {
+            "filter": {
+              "bool": {
+                "must": [
+                  {
+                    "term": {
+                      "__state": "ACTIVE"
+                    }
+                  },
+                  {
+                    "bool": {
+                      "should": [
+                        {
+                          "term": {
+                            "__typeName.keyword": "Database"
+                          }
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "bool": {
+                      "filter": {
+                        "term": {
+                          "connectionQualifiedName": "PLACEHOLDER_TO_BE_REPLACED"
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "attributes": [
+        "name",
+        "displayName"
+      ],
+      "relationAttributes": [],
+      "suppressLogs": true,
+      "requestMetadata": {},
+      "async": {
+        "isCallAsync": true,
+        "searchContextId": "f53f9d56-976e-4ec9-8cbc-a8c1d931a12a",
+        "searchContextSequenceNo": 1,
+        "requestTimeoutInSecs": 30
+      },
+      "excludeClassifications": false,
+      "includeClassificationNames": false,
+      "excludeMeanings": false,
+      "showSearchScore": false
+    }
+  },
+  "mparticle_api": {
+    "url": "https://jpmc.atlan.com/api/getDatabases",
+    "payload": {
+      "dsl": {
+        "sort": [
+          {
+            "name.keyword": {
+              "order": "asc"
+            }
+          }
+        ],
+        "size": 300,
+        "query": {
+          "bool": {
+            "filter": {
+              "bool": {
+                "must": [
+                  {
+                    "term": {
+                      "__state": "ACTIVE"
+                    }
+                  },
+                  {
+                    "bool": {
+                      "should": [
+                        {
+                          "term": {
+                            "__typeName.keyword": "Database"
+                          }
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "bool": {
+                      "filter": {
+                        "term": {
+                          "connectionQualifiedName": "PLACEHOLDER_TO_BE_REPLACED"
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "attributes": [
+        "name",
+        "displayName"
+      ],
+      "relationAttributes": [],
+      "suppressLogs": true,
+      "requestMetadata": {},
+      "async": {
+        "isCallAsync": true,
+        "searchContextId": "f53f9d56-976e-4ec9-8cbc-a8c1d931a12a",
+        "searchContextSequenceNo": 1,
+        "requestTimeoutInSecs": 30
+      },
+      "excludeClassifications": false,
+      "includeClassificationNames": false,
+      "excludeMeanings": false,
+      "showSearchScore": false
+    }
+  },
+  "spark_api": {
+    "url": "https://jpmc.atlan.com/api/getDatabases",
+    "payload": {
+      "dsl": {
+        "sort": [
+          {
+            "name.keyword": {
+              "order": "asc"
+            }
+          }
+        ],
+        "size": 300,
+        "query": {
+          "bool": {
+            "filter": {
+              "bool": {
+                "must": [
+                  {
+                    "term": {
+                      "__state": "ACTIVE"
+                    }
+                  },
+                  {
+                    "bool": {
+                      "should": [
+                        {
+                          "term": {
+                            "__typeName.keyword": "Database"
+                          }
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "bool": {
+                      "filter": {
+                        "term": {
+                          "connectionQualifiedName": "PLACEHOLDER_TO_BE_REPLACED"
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "attributes": [
+        "name",
+        "displayName"
+      ],
+      "relationAttributes": [],
+      "suppressLogs": true,
+      "requestMetadata": {},
+      "async": {
+        "isCallAsync": true,
+        "searchContextId": "f53f9d56-976e-4ec9-8cbc-a8c1d931a12a",
+        "searchContextSequenceNo": 1,
+        "requestTimeoutInSecs": 30
+      },
+      "excludeClassifications": false,
+      "includeClassificationNames": false,
+      "excludeMeanings": false,
+      "showSearchScore": false
+    }
+  },
+  "tableau_api": {
+    "url": "https://jpmc.atlan.com/api/getDatabases",
+    "payload": {
+      "dsl": {
+        "sort": [
+          {
+            "name.keyword": {
+              "order": "asc"
+            }
+          }
+        ],
+        "size": 300,
+        "query": {
+          "bool": {
+            "filter": {
+              "bool": {
+                "must": [
+                  {
+                    "term": {
+                      "__state": "ACTIVE"
+                    }
+                  },
+                  {
+                    "bool": {
+                      "should": [
+                        {
+                          "term": {
+                            "__typeName.keyword": "Database"
+                          }
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "bool": {
+                      "filter": {
+                        "term": {
+                          "connectionQualifiedName": "PLACEHOLDER_TO_BE_REPLACED"
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "attributes": [
+        "name",
+        "displayName"
+      ],
+      "relationAttributes": [],
+      "suppressLogs": true,
+      "requestMetadata": {},
+      "async": {
+        "isCallAsync": true,
+        "searchContextId": "f53f9d56-976e-4ec9-8cbc-a8c1d931a12a",
+        "searchContextSequenceNo": 1,
+        "requestTimeoutInSecs": 30
+      },
+      "excludeClassifications": false,
+      "includeClassificationNames": false,
+      "excludeMeanings": false,
+      "showSearchScore": false
+    }
+  },
+  "thoughtspot_api": {
+    "url": "https://jpmc.atlan.com/api/getDatabases",
+    "payload": {
+      "dsl": {
+        "sort": [
+          {
+            "name.keyword": {
+              "order": "asc"
+            }
+          }
+        ],
+        "size": 300,
+        "query": {
+          "bool": {
+            "filter": {
+              "bool": {
+                "must": [
+                  {
+                    "term": {
+                      "__state": "ACTIVE"
+                    }
+                  },
+                  {
+                    "bool": {
+                      "should": [
+                        {
+                          "term": {
+                            "__typeName.keyword": "Database"
+                          }
+                        }
+                      ]
+                    }
+                  },
+                  {
+                    "bool": {
+                      "filter": {
+                        "term": {
+                          "connectionQualifiedName": "PLACEHOLDER_TO_BE_REPLACED"
+                        }
+                      }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "attributes": [
+        "name",
+        "displayName"
+      ],
+      "relationAttributes": [],
+      "suppressLogs": true,
+      "requestMetadata": {},
+      "async": {
+        "isCallAsync": true,
+        "searchContextId": "f53f9d56-976e-4ec9-8cbc-a8c1d931a12a",
+        "searchContextSequenceNo": 1,
+        "requestTimeoutInSecs": 30
+      },
+      "excludeClassifications": false,
+      "includeClassificationNames": false,
+      "excludeMeanings": false,
+      "showSearchScore": false
+    }
+  }
 }
