Restored to 'e15317c4b294d72f0624a5036ea7a27a47a7604b'
Replit-Restored-To: e15317c4b294d72f0624a5036ea7a27a47a7604b

--- a/configs/config.json
+++ b/configs/config.json
@@ -1,8 +1,7 @@
 {
   "auth_token": "ehdasdjfasdfa.asdfasdf",
-  "atlan_base_url": "YOUR_ATLAN_INSTANCE_URL",
   "connections_api": {
-    "url": "https://your-org.atlan.com/api/getConnections",
+    "url": "https://jpmc.atlan.com/api/getConnections",
     "payload": {
       "dsl": {
         "size": 400,
@@ -48,7 +47,7 @@
     "teradata"   :"databases_api"
   },
   "databases_api": {
-    "url": "https://your-org.atlan.com/api/getDatabases",
+    "url": "https://jpmc.atlan.com/api/getDatabases",
     "payload": {
       "dsl": {
         "sort": [
@@ -115,7 +114,7 @@
     }
   },
   "alteryx_api": {
-    "url": "https://atlan.com/api/getDatabases",
+    "url": "https://jpmc.atlan.com/api/getDatabases",
     "payload": {
       "dsl": {
         "sort": [
@@ -182,7 +181,7 @@
     }
   },
   "api_api": {
-    "url": "https://atlan.com/api/getDatabases",
+    "url": "https://jpmc.atlan.com/api/getDatabases",
     "payload": {
       "dsl": {
         "sort": [
