--- a/configs/config.json
+++ b/configs/config.json
@@ -1,10 +1,6 @@
 {
-  "base_url_template": "https://{subdomain}.atlan.com",
-  "subdomain_auth_token_map": {
-    "xyz": "xyz_token_here",
-    "abc": "abc_token_here", 
-    "lmn": "lmn_token_here"
-  },
+  "base_url": "https://xyz.atlan.com",
+  "auth_token": "ehdasdjfasdfa.asdfasdf",
   "connections_api": {
     "url": "/api/getConnections",
     "payload": {
